# reservation_ddd

./: .gitignore  docker-compose.yml
app/: .env  Cargo.toml  Dockerfile
app/.sqlx/: query-4a7fcd6d7a8b945aa2050d2651ead632f6fcbf2b17801863819e837ca2c6501c.json
app/migrations/: 20231102125907_test.sql  20231105045605_app.sql
app/sql/: dummy.sql
app/src/: domain.rs  main.rs
app/src/domain/: hotel.rs  reservation.rs  room.rs  user.rs
app/src/domain/common/: id.rs
app/src/domain/hotel/: hotel.rs  hotel_id.rs  hotel_name.rs  hotel_repository.rs  hotel_service.rs
app/src/domain/reservation/: reservation.rs  reservation_repository.rs  reservation_service.rs
app/src/domain/room/: room.rs  room_id.rs  room_name.rs  room_repository.rs  room_service.rs
app/src/domain/user/: user.rs  user_id.rs  user_kind.rs  user_name.rs  user_repository.rs  user_repository_cache.rs  user_service.rs
app/src/infrastructure/datastore/: postgresql.rs
